fixed overlap

--- a/src/Header/style.css
+++ b/src/Header/style.css
@@ -6,6 +6,7 @@
   border: 1px solid #878787;
   padding: 18px 18px 0 18px;
   height: 80px;
+  background-color: white;
 }
 .title {
   color: #212121;
